// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Read 180 Respond Write Container Action should return the correct constant for getRespondWriteRequest 1`] = `
Object {
  "data": undefined,
  "type": "app/Read180RespondWriteContainer/GET_RESPOND_WRITE_REQUEST",
}
`;

exports[`Read 180 Respond Write Container Action should return the correct constant for saveRespondData 1`] = `
Object {
  "data": undefined,
  "type": "app/Read180RespondWriteContainer/SET_RESPOND_WRITE_DATA_REQUEST",
}
`;

exports[`Read 180 Respond Write Container Action should return the correct constant for setRespondWriteRequest 1`] = `
Object {
  "data": undefined,
  "rowItem": undefined,
  "type": "app/Read180RespondWriteContainer/SET_RESPOND_WRITE_REQUEST",
}
`;

exports[`Read 180 Respond Write Container Action should return the correct constant for setRespondWrites44Request 1`] = `
Object {
  "data": undefined,
  "rowItem": undefined,
  "type": "app/Read180RespondWriteContainer/SET_RESPOND_WRITE_REQUEST_S44",
}
`;
